Fixed the issue with elements on the Resume page shifting to the left. The Resume page was the only page displaying a scrollbar on the right-hand side of the browser, which was causing the elements to shift. Added a CSS attribute to the HTML element to display a scrollbar on all the pages regardless of length.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 /**********
 GENERAL
 **********/
+
+html {
+	overflow-y: scroll;
+}
+
 nav {
 	overflow: auto; 
 	margin: 20px;
@@ -17,7 +22,7 @@ h1 {
 }
 
 .wrapper {
-	margin: 0% 20%;  
+	margin: 0% 15%; 
 }
 
 .top-nav { 
@@ -34,6 +39,7 @@ h1 {
 /**********
 RESUME
 **********/
+
 .first-col {
 	float: left; 
 	width: 45%;
